<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<TableLayout
		android:id="@+id/widget39"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>
		<TableRow
			android:id="@+id/widget40"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20px"
			android:layout_marginBottom="20px"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/widget38"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10px"
				android:layout_marginRight="10px"
				android:text="@string/SpriteTitle"
				android:layout_gravity="center_vertical"
				/>
			<EditText
				android:id="@+id/spriteCount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="250"
				android:textSize="18sp"
				/>
			<CheckBox
				android:id="@+id/animateSprites"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/AnimateTitle"
				android:layout_gravity="center_vertical"
				android:checked="true"
				/>
		</TableRow>
		<RadioGroup 
			android:id="@+id/renderMethod"
			>
			<RadioButton 
				android:id="@+id/methodCanvas" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/CanvasTitle"
				/>
			<RadioButton 
				android:id="@+id/methodOpenGL" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/OpenGLTitle"
				/>
		</RadioGroup>
		
		<RadioGroup
			android:paddingLeft = "50px"
			android:id="@+id/GLSettings"
			>
			<RadioButton 
				android:id="@+id/settingVerts" 
				android:layout_width="wrap_content" 
				android:text="@string/UseVertsTitle" 
				android:layout_height="wrap_content"
				/>
			<RadioButton 
				android:id="@+id/settingBatchedVertsFloat" 
				android:layout_width="wrap_content" 
				android:text="@string/UseBatchedVertsFloatTitle" 
				android:layout_height="wrap_content"
				/>
			<RadioButton 
				android:id="@+id/settingBatchedVertsFixed" 
				android:layout_width="wrap_content" 
				android:text="@string/UseBatchedVertsFixedTitle" 
				android:layout_height="wrap_content"
				/>
			<RadioButton 
				android:id="@+id/settingDrawTextureFloat" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/UseDrawTextureFloatTitle"
				/>
			<RadioButton 
				android:id="@+id/settingDrawTextureFixed" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/UseDrawTextureFixedTitle"
				/>
			<RadioButton 
				android:id="@+id/settingVBO" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/UseVBOTitle"
				/>
		</RadioGroup>
		
		<Button
			android:id="@+id/runTest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/RunTestTitle"
			/>	
	</TableLayout>
</ScrollView>